<resources>
    <string name="app_name">SuperCalc</string>
    <string name="uno">1</string>
    <string name="tres">3</string>
    <string name="cuatro">4</string>
    <string name="dos">2</string>
    <string name="cinco">5</string>
    <string name="seis">6</string>
    <string name="mas">+</string>
    <string name="menos">-</string>
    <string name="cero">0</string>
    <string name="punto">.</string>
    <string name="igual">=</string>
    <string name="siete">7</string>
    <string name="ocho">8</string>
    <string name="nueve">9</string>
    <string name="multiplicar">*</string>
    <string name="seno">sin</string>
    <string name="coseno">cos</string>
    <string name="tangente">tan</string>
    <string name="division">/</string>
    <string name="Raiz">Raíz</string>
    <string name="Factorial">!</string>
    <string name="Potencia">^</string>
    <string name="LimpiarTodo">C. A.</string>
    <string name="Memoria">Mem</string>
    <string name="LimpiarEntrada">C. E.</string>
    <string name="parentesisAbierto">(</string>
    <string name="parentesisCerrado">)</string>
    <string name="parentesisCuadrados">[ ]</string>
    <string name="pi">pi</string>
    <string name="e">e</string>
</resources>
